--- a/portfolio/frontend/templates/index.html
+++ b/portfolio/frontend/templates/index.html
@@ -29,8 +29,22 @@
     <div class="home">
         <div class="wrap">
             <div class="home-text-container">
-                <h2 class="head-text">Hi, I'm Jayce!</h2>
-                <h3 id="subtext" class="subtext-carousel">Utah Programmer</h3>
+                <span class="head-text">Hi, I'm Jayce!</span><br>
+                <div class="slider">
+                    <div class="mask">
+                    <ul>
+                        <li class="anim1">
+                            <div class="item">Utah Programmer</div>
+                        </li>
+                        <li class="anim2">
+                            <div class="item">Open Source Advocate</div>
+                        </li>
+                        <li class="anim3">
+                            <div class="item">Linux Enthusiast</div>
+                        </li>
+                    </ul>
+                    </div>
+                </div>
             </div>
             <div class="home-image-container">
                 <img src="{% static 'assets/home-image.png' %}" alt="" srcset="" >
